added a blog page and did some minor changes

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -8,12 +8,15 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Site</title>
+		<title>Blog</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
+        <a href="/">Home</a>
 		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
-		<h1>Astro Site</h1>
+        <a href="/blog/">Blog</a>
+		<h1>A Blog so great, it will leave you stunned</h1>
+        <h3>or not, who really knows, eh?</h3>
+        <p>Read some of this... or don't</p>
+        <p></p>
 	</body>
 </html>
