--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,9 +8,12 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Site</title>
+		<title>About Me</title>
 	</head>
 	<body>
+        <a href="/">Home</a>
+		<a href="/about/">About</a>
+        <a href="/blog/">Blog</a>
 		<h1>About Me</h1>
         <h2>... and the stuff I build</h2>
         <p>I am working on this actually very nice tutorial.</p>
