--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,5 @@
 ---
-
+const pageTitle = "Blog"
 ---
 
 <html lang="en">
@@ -8,15 +8,19 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Blog</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
         <a href="/">Home</a>
 		<a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
-		<h1>A Blog so great, it will leave you stunned</h1>
+        <a href="/blog/">{pageTitle}</a>
+		<h1>A {pageTitle} so great, it will leave you stunned</h1>
         <h3>or not, who really knows, eh?</h3>
         <p>Read some of this... or don't</p>
-        <p></p>
+        <ul>
+            <li><a href="/posts/post-01/">Post 01</a></li>
+            <li><a href="/posts/post-02/">Post 02</a></li>
+            <li><a href="/posts/post-03/">Post 03</a></li>
+        </ul>
 	</body>
 </html>
