--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,8 @@
 ---
+import Navigation from "@/components/Navigation.astro";
+import Footer from '@/components/Footer.astro';
+import "@/styles/global.css";
+
 const pageTitle = "Home"
 ---
 
@@ -11,10 +15,9 @@ const pageTitle = "Home"
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">{pageTitle}</a>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+		<Navigation />
 		<h1>{pageTitle}</h1>
 		<p>What is going on in here?</p>
+		<Footer />
 	</body>
 </html>
