--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import Navigation from "@/components/Navigation.astro";
 import Footer from '@/components/Footer.astro';
 import "@/styles/global.css";
+import Header from "@/components/Header.astro";
 
 const pageTitle = "Home"
 ---
@@ -15,9 +15,12 @@ const pageTitle = "Home"
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<Navigation />
+		<Header />
 		<h1>{pageTitle}</h1>
 		<p>What is going on in here?</p>
 		<Footer />
+		<script>
+			import "@/scripts/menu.js"
+		</script>
 	</body>
 </html>
