--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,21 +3,85 @@ html {
     font-family: Lato, sans-serif;
   }
   
-  body {
+body {
     margin: 0 auto;
     width: 100%;
     max-width: 80ch;
     padding: 1rem;
     line-height: 1.5;
-  }
+}
   
-  * {
-    box-sizing: border-box;
-  }
+* {
+  box-sizing: border-box;
+}
   
-  h1 {
-    margin: 1rem 0;
-    font-size: 3rem;
-    font-family: Gabarito;
-    line-height: 1.2;
+h1 {
+  margin: 1rem 0;
+  font-size: 3rem;
+  font-family: Gabarito;
+  line-height: 1.2;
+}
+
+
+.hamburger {
+  padding-right: 20px;
+  cursor: pointer;
+}
+  
+.hamburger .line {
+  display: block;
+  width: 40px;
+  height: 5px;
+  margin-bottom: 10px;
+  background-color: #ff9776;
+}
+
+  /* nav styles */
+
+.nav-links {
+  width: 100%;
+  top: 5rem;
+  left: 1rem;
+  background-color: #1dcc9a;
+  display:none;
+  margin: 0;
+}
+
+.nav-links a {
+  display: block;
+  text-align: center;
+  padding: 10px 0;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.nav-links a:hover,
+.nav-links a:focus {
+  background-color: #edecdf;
+}
+
+.expanded {
+  display: unset;
+}
+
+@media screen and (min-width: 636) {
+  .nav-links {
+    margin-left: 1em;
+    display: block;
+    position: sticky;
+    width: auto;
+    background: none;
   }
+
+  .nav-links a {
+    display: inline-block;
+    padding: 15px 20px;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+}
