--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,33 +1,16 @@
 ---
-import Footer from '@/components/Footer.astro';
-import Header from "@/components/Header.astro";
-
+import BlogPost from "@/components/BlogPost.astro";
+import BaseLayout from "@/layouts/BaseLayout.astro";
 import "@/styles/global.css";
+const allPosts = Object.values(import.meta.glob("./posts/*.md", { eager: true}));
 
 const pageTitle = "Blog"
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
-		<Header />
-		<h1>A {pageTitle} so great, it will leave you stunned</h1>
-        <h3>or not, who really knows, eh?</h3>
-        <p>Read some of this... or don't</p>
-        <ul>
-            <li><a href="/posts/post-01/">Post 01</a></li>
-            <li><a href="/posts/post-02/">Post 02</a></li>
-            <li><a href="/posts/post-03/">Post 03</a></li>
-        </ul>
-		<Footer />
-		<script>
-			import "@/scripts/menu.js"
-		</script>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+	<h4>A {pageTitle} so great, it will leave you stunned</h4>
+	<h3>or not, who really knows, eh?</h3>
+	<p>Read some of this... or don't</p>
+	<ul>
+		{allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+	</ul>
+</BaseLayout>
