--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,26 +1,8 @@
 ---
-import Footer from '@/components/Footer.astro';
-import "@/styles/global.css";
-import Header from "@/components/Header.astro";
-
-const pageTitle = "Home"
+import BaseLayout from "@/layouts/BaseLayout.astro"
+const pageTitle = "Home";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
-		<Header />
-		<h1>{pageTitle}</h1>
-		<p>What is going on in here?</p>
-		<Footer />
-		<script>
-			import "@/scripts/menu.js"
-		</script>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+	<h2>My awesome BLOG subtitle</h2>
+</BaseLayout>
